--- a/changelog
+++ b/changelog
@@ -1,4 +1,22 @@
-commit 65833740f5f6702b04941634c84e93d4d5f4624b (HEAD, origin/master, origin/HEAD, master)
+commit 0a15ebeb254a99acd01e2cc3b0f19f891dec7a8b (HEAD, origin/master, origin/HEAD, master)
+Author: jose perez <sinfallas@gmail.com>
+Date:   Fri Mar 4 18:45:07 2016 -0430
+
+    * travis logo
+
+commit 90565f6bb993d404075d2da791466273b36facc9
+Author: jose perez <sinfallas@gmail.com>
+Date:   Fri Mar 4 18:44:18 2016 -0430
+
+    * travis
+
+commit 9972263763d89214620d2b565ea74192f8e61663
+Author: jose perez <sinfallas@gmail.com>
+Date:   Fri Mar 4 18:37:08 2016 -0430
+
+    * changelog
+
+commit 65833740f5f6702b04941634c84e93d4d5f4624b
 Author: jose perez <sinfallas@gmail.com>
 Date:   Fri Mar 4 18:36:58 2016 -0430
 
