--- a/changelog
+++ b/changelog
@@ -1,4 +1,10 @@
-commit d54a212523e34073e0bad46e53a7c908df6ad711 (HEAD -> master, origin/master, origin/HEAD)
+commit 6f9e3b271343455e5b82744f3b7fc2c2b9e4f7f5 (HEAD -> master, origin/master, origin/HEAD)
+Author: Jesus <sinfallas@gmail.com>
+Date:   Sun Jan 31 16:05:12 2021 -0400
+
+    * changelog
+
+commit d54a212523e34073e0bad46e53a7c908df6ad711
 Author: config <Palencia>
 Date:   Mon Jul 6 22:03:46 2020 -0400
 
